Correction de l'URL du lien LinkedIn pour qu'elle soit complète et fonctionnelle

--- a/Mission1/index.html
+++ b/Mission1/index.html
@@ -11,7 +11,7 @@
         <a href="CV-STAGE-WAEL-ELHARTI-V1.pdf" target="_blank" class="link-button">📥 Télécharger mon CV</a>
         
         <h3>Mon LindekIn</h3>
-        <a href="www.linkedin.com/in/wael-el-harti" target="_blank" class="link-button">Lien vers mon LinkedIn</a>
+        <a href="https://www.linkedin.com/in/wael-el-harti" target="_blank" class="link-button">Lien vers mon LinkedIn</a>
     </div>
 </body>
 </html>
