--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             <p>Métiers d’avenir et navigation bi-volet.</p>
         </a>
 
+        <a class="card" href="TP5/index.html">
+            <div class="card-icon">🧭</div>
+            <h2>TP5</h2>
+            <p>Decouverte du CSS.</p>
+        </a>
+
         <a class="card" href="Mission1/index.html">
             <div class="card-icon">📄</div>
             <h2>Mission 1</h2>
@@ -57,3 +63,4 @@
 </body>
 </html>
 </html>
+
