Add message input field to the form
Added a message input field to the form.

--- a/TP5/index.html
+++ b/TP5/index.html
@@ -17,10 +17,14 @@
     <label for="tel">Telephone :</label>
     <input type="number" id="tel" name="tel">
 
+    <label for="message">Message :</label>
+    <input type="textarea" id="message" name="message">
+
     <input type="submit" value="Envoyer">
 
     <a href="../index.html"> Retour</a>
   </form>
 
 </body>
+
 </html>
