--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
         </a>
 
         <a class="card" href="TP5/index.html">
-            <div class="card-icon">🧭</div>
+            <div class="card-icon">📘</div>
+            <h2>TP5</h2>
+            <p>Decouverte du CSS.</p>
+        </a>
+
+         <a class="card" href="TP6/inscription.html">
+            <div class="card-icon">📕</div>
             <h2>TP5</h2>
             <p>Decouverte du CSS.</p>
         </a>
@@ -63,4 +69,5 @@
 </body>
 </html>
 </html>
+
 
