Fix TP6 link and update description
Corrected the link and description for TP6.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
          <a class="card" href="TP6/inscription.html">
             <div class="card-icon">📕</div>
-            <h2>TP5</h2>
-            <p>Decouverte du CSS.</p>
+            <h2>TP6</h2>
+            <p>Formulaire structuré.</p>
         </a>
 
         <a class="card" href="Mission1/index.html">
@@ -69,6 +69,7 @@
 </body>
 </html>
 </html>
+
 
 
 
