Add Mission 3: Event site with multiple pages and styles
- Created formulaire.html for event registration.
- Added index.html as the homepage for Mission 3.
- Introduced mission3.html as the main events page.
- Developed perso.html for personal information.
- Added styles.css for basic styling of the pages.
- Updated main index.html to include a link to Mission 3.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <h2>Mission 2</h2>
             <p>Portail d’information et tableaux/formulaires.</p>
         </a>
+
+        <a class="card" href="Mission3/index.html">
+            <div class="card-icon">:)</div>
+            <h2>Mission 3</h2>
+            <p>Site d'evenements.</p>
+        </a>
     </main>
 
     <footer class="site-footer">
