--- a/Mission3/mission3.html
+++ b/Mission3/mission3.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Events'Site</h1>
-  <p>Acceuil de la page d'événements</p>
+  <h1>Mission 3 - Accueil</h1>
+  <h2>Mon Événement</h2>
+  <p>Accueil de la page d'événements.</p>
 
   <p>
     <a href="formulaire.html">Aller au formulaire</a> |
@@ -15,6 +16,8 @@
     <a href="../index.html">Retour hub</a>
   </p>
 
-  <p>Événement le 12/12/2025 à Paris.</p>
+  <p>Date : 12/12/2025</p>
+  <p>Lieu : Paris</p>
+  <p>Description : petit événement de test.</p>
 </body>
 </html>
