--- a/Mission3/perso.html
+++ b/Mission3/perso.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Auteur: Waël El Harti -->
 <html>
 <head>
   <meta charset="UTF-8">
@@ -6,7 +7,47 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Page perso</h1>
-  <p>Page minimale.</p>
+  <header>
+    <h1>Page personnelle</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">À propos</a></li>
+        <li><a href="#hobbies">Mes loisirs</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>Présentation</h2>
+    <p>Je me présente en quelques mots.</p>
+    <img alt="Image simple" width="180" height="120" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='120'%3E%3Crect width='100%25' height='100%25' fill='%23ddd'/%3E%3Ctext x='50%25' y='55%25' text-anchor='middle' font-size='16' fill='%23666' font-family='Arial'%3EImage%3C/text%3E%3C/svg%3E">
+  </section>
+
+  <section id="hobbies">
+    <h2>Projets</h2>
+    <ol>
+      <li>Projet 1</li>
+      <li>Projet 2</li>
+    </ol>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <form action="#" method="post">
+      <p>Nom<br><input type="text" name="nom"></p>
+      <p>Email<br><input type="email" name="email"></p>
+      <p>Message<br><textarea name="message"></textarea></p>
+      <p><button type="submit" class="btn">Envoyer</button></p>
+    </form>
+  </section>
+
+  <footer>
+    <p>
+      <a href="wael-elharti.com" target="_blank" rel="noopener">Page personnelle</a> |
+      <a href="www.linkedin.com/in/wael-el-harti" target="_blank" rel="noopener">LinkedIn</a>
+    </p>
+    <p><a href="mission3.html">Retour à l'accueil</a></p>
+  </footer>
 </body>
 </html>
