Suppression des informations de date, lieu et description dans mission3.html ; mise à jour du lien vers mission3.html dans index.html

--- a/Mission3/perso.html
+++ b/Mission3/perso.html
@@ -21,7 +21,7 @@
   <section id="about">
     <h2>Présentation</h2>
     <p>Je me présente en quelques mots.</p>
-    <img alt="Image simple" width="180" height="120" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='120'%3E%3Crect width='100%25' height='100%25' fill='%23ddd'/%3E%3Ctext x='50%25' y='55%25' text-anchor='middle' font-size='16' fill='%23666' font-family='Arial'%3EImage%3C/text%3E%3C/svg%3E">
+    <img alt="Image simple" width="180" height="120" src="https://i.pinimg.com/736x/48/51/60/485160c55c513f8eac38027385f38a52.jpg">
   </section>
 
   <section id="hobbies">
