--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Portail d’information et tableaux/formulaires.</p>
         </a>
 
-        <a class="card" href="Mission3/index.html">
+        <a class="card" href="Mission3/mission3.html">
             <div class="card-icon">:)</div>
             <h2>Mission 3</h2>
             <p>Site d'evenements.</p>
