Amélioration du formulaire d'inscription : ajout de placeholders, mise à jour des labels et ajout d'un champ pour le numéro de département. Mise à jour de la page d'accueil avec les détails de l'événement et amélioration de la page personnelle avec une présentation plus complète et des liens corrects.

--- a/Mission3/mission3.html
+++ b/Mission3/mission3.html
@@ -8,13 +8,15 @@
 <body>
   <h1>Mission 3 - Accueil</h1>
   <h2>Mon Événement</h2>
-  <p>Accueil de la page d'événements.</p>
+  <p>Date : 12/12/2025</p>
+  <p>Lieu : Paris</p>
+  <p>Description : petit événement de test.</p>
 
   <p>
     <a href="formulaire.html">Aller au formulaire</a> |
     <a href="perso.html">Page perso</a> |
     <a href="../index.html">Retour hub</a>
   </p>
-  
+
 </body>
 </html>
