--- a/Mission3/perso.html
+++ b/Mission3/perso.html
@@ -20,15 +20,17 @@
 
   <section id="about">
     <h2>Présentation</h2>
-    <p>Je me présente en quelques mots.</p>
+    <p>Je m'appelle Waël El Harti, je suis actuellement en BTS SIO et j'aimerias par la suite continuer en specialité SISR. J'aime l'informatique et la technilogie et je souhaite me specialiser en cybersecurité, systemes et reseaux.</p>
     <img alt="Image simple" width="180" height="120" src="https://i.pinimg.com/736x/48/51/60/485160c55c513f8eac38027385f38a52.jpg">
   </section>
 
   <section id="hobbies">
-    <h2>Projets</h2>
+     <h2>Mes loisirs</h2>
     <ol>
-      <li>Projet 1</li>
-      <li>Projet 2</li>
+      <li>Le sport (musculation, arts martiaux)</li>
+        <img alt="Image simple" width="180" height="120" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%2Fid%2FOIP.HOrlDuOayFArTL3-TmgUrwHaHa%3Fpid%3DApi&f=1&ipt=e87e92347a8eced5ef6054a84ffc9542655730baf55563ef3597bb839488b2e0&ipo=images">
+      <li>Geeker (informatique, jeux video, technologies)</li>
+        <img alt="Image simple" width="180" height="120" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%2Fid%2FOIP.L2-n7fCdWz2mogEEzGm6awHaHd%3Fpid%3DApi&f=1&ipt=fd358731a54891fb11815ea60b209026a2a7124589d3d91bef21c5ea9909bd5d&ipo=images">
     </ol>
   </section>
 
@@ -44,8 +46,8 @@
 
   <footer>
     <p>
-      <a href="wael-elharti.com" target="_blank" rel="noopener">Page personnelle</a> |
-      <a href="www.linkedin.com/in/wael-el-harti" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="https://wael-elharti.com" target="_blank" rel="noopener">Page personnelle</a> |
+      <a href="https://www.linkedin.com/in/wael-el-harti" target="_blank" rel="noopener">LinkedIn</a>
     </p>
     <p><a href="mission3.html">Retour à l'accueil</a></p>
   </footer>
