--- a/Mission3/formulaire.html
+++ b/Mission3/formulaire.html
@@ -9,14 +9,15 @@
   <h1>Formulaire d'inscription</h1>
 
   <form action="#" method="post">
-    <table>
+    <!-- Tableau 2 colonnes, bordure invisible comme demandé -->
+    <table border="0">
       <tr>
         <td><label for="pseudo">Pseudo*</label></td>
-        <td><input id="pseudo" name="pseudo" type="text" required></td>
+  <td><input id="pseudo" name="pseudo" type="text" placeholder="Votre pseudo" maxlength="40" required></td>
       </tr>
       <tr>
         <td><label for="mdp">Mot de passe</label></td>
-        <td><input id="mdp" name="mdp" type="password" maxlength="20"></td>
+  <td><input id="mdp" name="mdp" type="password" placeholder="Mot de passe" maxlength="20"></td>
       </tr>
       <tr>
         <td><label for="prenom">Prenom</label></td>
@@ -57,15 +58,19 @@
       </tr>
       <tr>
         <td><label for="ville">Ville</label></td>
-        <td><input id="ville" name="ville" type="text" maxlength="60"></td>
+  <td><input id="ville" name="ville" type="text" placeholder="Votre ville" maxlength="60"></td>
       </tr>
       <tr>
         <td><label for="cp">Code Postale</label></td>
-        <td><input id="cp" name="cp" type="text" maxlength="10"></td>
+  <td><input id="cp" name="cp" type="text" placeholder="75000" maxlength="10"></td>
+      </tr>
+      <tr>
+        <td><label for="dept">Numéro de département</label></td>
+        <td><input id="dept" name="dept" type="number" placeholder="75" min="1" max="976"></td>
       </tr>
       <tr>
         <td><label for="adresse">Adresse</label></td>
-        <td><textarea id="adresse" name="adresse" rows="4" cols="30"></textarea></td>
+  <td><textarea id="adresse" name="adresse" rows="4" cols="30" placeholder="Votre adresse complète" maxlength="300"></textarea></td>
       </tr>
       <tr>
         <td><label for="naissance">Date de Naissance</label></td>
@@ -77,15 +82,15 @@
       </tr>
       <tr>
         <td><label for="tel">Telephone</label></td>
-        <td><input id="tel" name="tel" type="tel" placeholder="+33..."></td>
+  <td><input id="tel" name="tel" type="tel" placeholder="0600000000" maxlength="20"></td>
       </tr>
       <tr>
         <td><label for="recherche">recherche</label></td>
-        <td><input id="recherche" name="recherche" type="search" placeholder="Votre recherche"></td>
+  <td><input id="recherche" name="recherche" type="search" placeholder="Votre recherche" maxlength="60"></td>
       </tr>
       <tr>
         <td><label for="site">url</label></td>
-        <td><input id="site" name="site" type="url" placeholder="https://..."></td>
+  <td><input id="site" name="site" type="url" placeholder="https://exemple.com" maxlength="120"></td>
       </tr>
       <tr>
         <td><label for="couleur">Couleur</label></td>
