Ajout des pages TP7 et TP8 avec leur contenu et styles associés dans le projet.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
             <p>Formulaire structuré.</p>
         </a>
 
+         <a class="card" href="TP7/TP7.1.html">
+            <div class="card-icon">📕</div>
+            <h2>TP7</h2>
+            <p></p>
+        </a>
+
+         <a class="card" href="TP8/index.html">
+            <div class="card-icon">📕</div>
+            <h2>TP8</h2>
+            <p></p>
+        </a>
+
         <a class="card" href="Mission1/index.html">
             <div class="card-icon">📄</div>
             <h2>Mission 1</h2>
