Amélioration de la présentation de la section TP8 : ajout d'une description pour Aiden Pierce dans index.html et ajustement des styles CSS pour une meilleure esthétique.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          <a class="card" href="TP8/index.html">
             <div class="card-icon">📕</div>
             <h2>TP8</h2>
-            <p></p>
+            <p>Presentation de Aiden Pierce</p>
         </a>
 
         <a class="card" href="Mission1/index.html">
