Ajout du rapport de mission 4 et réorganisation des sections dans index.html pour une meilleure présentation.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="description" content="Hub de navigation vers les TP et Missions du BTS SIO.">
     <meta name="color-scheme" content="light dark">
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='16' fill='%233498db'/%3E%3Ctext x='50' y='60' text-anchor='middle' font-size='54' fill='white' font-family='Arial'%3ES%3C/text%3E%3C/svg%3E">
-
 </head>
 <body>
     <header class="site-header">
@@ -19,50 +18,58 @@
         <p class="subtitle">Retrouvez ici tous les travaux réalisés en première année.</p>
     </header>
 
-    <main class="cards-grid">
-        <a class="card" href="TP1/index.html">
+    <main>
+        <section class="section">
+            <h2 class="section-title">📚 Travaux Pratiques (TP)</h2>
+            <div class="cards-grid">
+                <a class="card" href="TP1/index.html">
             <div class="card-icon">📘</div>
-            <h2>TP1</h2>
+                    <h3>TP1</h3>
             <p>Présentation du BTS SIO et spécialités.</p>
         </a>
 
         <div class="card card-disabled" aria-disabled="true" tabindex="-1">
             <div class="card-icon">📕</div>
-            <h2>TP2</h2>
-            <p>À venir (vide).</p>
+                    <h3>TP2</h3>
+            <p>vide.</p>
         </div>
 
         <a class="card" href="TP3/index.html">
             <div class="card-icon">🧭</div>
-            <h2>TP3</h2>
+                    <h3>TP3</h3>
             <p>Métiers d’avenir et navigation bi-volet.</p>
         </a>
 
         <a class="card" href="TP5/index.html">
             <div class="card-icon">📘</div>
-            <h2>TP5</h2>
+                    <h3>TP5</h3>
             <p>Decouverte du CSS.</p>
         </a>
 
          <a class="card" href="TP6/inscription.html">
             <div class="card-icon">📕</div>
-            <h2>TP6</h2>
+                    <h3>TP6</h3>
             <p>Formulaire structuré.</p>
         </a>
 
          <a class="card" href="TP7/TP7.1.html">
             <div class="card-icon">📕</div>
-            <h2>TP7</h2>
+                    <h3>TP7</h3>
             <p></p>
         </a>
 
-         <a class="card" href="TP8/index.html">
-            <div class="card-icon">📕</div>
-            <h2>TP8</h2>
-            <p>Presentation de Aiden Pierce</p>
-        </a>
+                <a class="card" href="TP8/index.html">
+                    <div class="card-icon">📕</div>
+                    <h3>TP8</h3>
+                    <p>Presentation de Aiden Pierce</p>
+                </a>
+            </div>
+        </section>
 
-        <a class="card" href="Mission1/index.html">
+        <section class="section">
+            <h2 class="section-title">🎯 Missions</h2>
+            <div class="cards-grid">
+                <a class="card" href="Mission1/index.html">
             <div class="card-icon">📄</div>
             <h2>Mission 1</h2>
             <p>Documents de candidature (CV, lettre de motivation, LinkedIn).</p>
@@ -79,6 +86,14 @@
             <h2>Mission 3</h2>
             <p>Site d'evenements.</p>
         </a>
+
+                <a class="card" href="Mission4/Mission4-WaëlElHarti.pdf" target="_blank">
+                    <div class="card-icon">📋</div>
+                    <h3>Mission 4</h3>
+                    <p>Rapport de mission (PDF).</p>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer class="site-footer">
