Ajout de la calculatrice JS : création des fichiers HTML, CSS et JS, et ajout d'un lien vers la nouvelle fonctionnalité dans index.html.

--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
             <p></p>
         </a>
 
-                <a class="card" href="TP8/index.html">
-                    <div class="card-icon">📕</div>
-                    <h3>TP8</h3>
-                    <p>Presentation de Aiden Pierce</p>
-                </a>
+        <a class="card" href="TP8/index.html">
+            <div class="card-icon">📕</div>
+            <h3>TP8</h3>
+            <p>Presentation de Aiden Pierce</p>
+        </a>
+        
+        <a class="card" href="TP9/calculatrice.html">
+            <div class="card-icon">📕</div>
+            <h3>TP9</h3>
+            <p>TP JS calculatrice</p>
+        </a>
             </div>
         </section>
 
