--- a/TP9/calculatrice.html
+++ b/TP9/calculatrice.html
@@ -15,9 +15,9 @@
     <label>Nombre 2:</label>
     <input type="number" id="t2" placeholder="Saisir un nombre">
 
-    <button onclick="somme()">Addition</button>
+    <br><button onclick="somme()">Addition</button>
 
     <input type="text" name="resultat" id="resultat">
-    <a href="../index.html">Retour au sommaire</a>
+    <br><a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
