Ajout de la mini-calculatrice JS avec interface HTML, logique de calcul et styles CSS.

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <h2 class="section-title">📚 Travaux Pratiques (TP)</h2>
             <div class="cards-grid">
                 <a class="card" href="TP1/index.html">
-            <div class="card-icon">📘</div>
+                    <div class="card-icon">🎓</div>
                     <h3>TP1</h3>
-            <p>Présentation du BTS SIO et spécialités.</p>
+                    <p>Présentation du BTS SIO et spécialités.</p>
         </a>
 
         <div class="card card-disabled" aria-disabled="true" tabindex="-1">
-            <div class="card-icon">📕</div>
+                    <div class="card-icon">⏳</div>
                     <h3>TP2</h3>
-            <p>vide.</p>
+                    <p>À venir (vide).</p>
         </div>
 
         <a class="card" href="TP3/index.html">
@@ -41,33 +41,39 @@
         </a>
 
         <a class="card" href="TP5/index.html">
-            <div class="card-icon">📘</div>
+                    <div class="card-icon">🎨</div>
                     <h3>TP5</h3>
-            <p>Decouverte du CSS.</p>
+                    <p>Découverte du CSS.</p>
         </a>
 
          <a class="card" href="TP6/inscription.html">
-            <div class="card-icon">📕</div>
+                    <div class="card-icon">📝</div>
                     <h3>TP6</h3>
-            <p>Formulaire structuré.</p>
+                    <p>Formulaire structuré.</p>
         </a>
 
          <a class="card" href="TP7/TP7.1.html">
-            <div class="card-icon">📕</div>
+                    <div class="card-icon">🔧</div>
                     <h3>TP7</h3>
-            <p></p>
+                    <p>Exercices pratiques.</p>
         </a>
 
         <a class="card" href="TP8/index.html">
-            <div class="card-icon">📕</div>
-            <h3>TP8</h3>
-            <p>Presentation de Aiden Pierce</p>
+                    <div class="card-icon">🕵️</div>
+                    <h3>TP8</h3>
+                    <p>Présentation de Aiden Pierce</p>
         </a>
         
         <a class="card" href="TP9/calculatrice.html">
-            <div class="card-icon">📕</div>
-            <h3>TP9</h3>
-            <p>TP JS calculatrice</p>
+                    <div class="card-icon">🧮</div>
+                    <h3>TP9</h3>
+                    <p>TP JS calculatrice</p>
+        </a>
+
+        <a class="card" href="TP10/index.html">
+                    <div class="card-icon">⚡</div>
+                    <h3>TP10</h3>
+                    <p>TP JS calculatrice avancée</p>
         </a>
             </div>
         </section>
@@ -76,9 +82,9 @@
             <h2 class="section-title">🎯 Missions</h2>
             <div class="cards-grid">
                 <a class="card" href="Mission1/index.html">
-            <div class="card-icon">📄</div>
-            <h2>Mission 1</h2>
-            <p>Documents de candidature (CV, lettre de motivation, LinkedIn).</p>
+                    <div class="card-icon">💼</div>
+                    <h3>Mission 1</h3>
+                    <p>Documents de candidature (CV, lettre de motivation, LinkedIn).</p>
         </a>
 
         <a class="card" href="Mission2/index.html">
@@ -88,9 +94,9 @@
         </a>
 
         <a class="card" href="Mission3/mission3.html">
-            <div class="card-icon">:)</div>
-            <h2>Mission 3</h2>
-            <p>Site d'evenements.</p>
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 3</h3>
+                    <p>Site d'événements.</p>
         </a>
 
                 <a class="card" href="Mission4/Mission4-WaëlElHarti.pdf" target="_blank">
