--- a/TP10/index.html
+++ b/TP10/index.html
@@ -14,15 +14,15 @@
 
     <label>Nombre 2:</label>
     <input type="number" id="t2" placeholder="Saisir le deuxième nombre">
-
-    <br><button onclick="addition()">Addition</button>
+    <br>
+    <button onclick="addition()">Addition</button>
     <button onclick="soustraction()">Soustraction</button>
     <button onclick="multiplication()">Multiplication</button>
     <button onclick="division()">Division</button>
-
+    <br>
     <button onclick="parite()">Parité</button>
     <button onclick="permutation()">Permuter</button>
-
+    <br>
     <input type="text" name="resultat" id="t3" readonly>
     <input type="text" name="parite" id="t4" readonly>
     <br><a href="../index.html">Retour au sommaire</a>
