--- a/TP10/index.html
+++ b/TP10/index.html
@@ -23,8 +23,8 @@
     <button onclick="parite()">Parité</button>
     <button onclick="permutation()">Permuter</button>
     <br>
-    <input type="text" name="resultat" id="t3" placeholder="resultat" readonly>
-    <input type="text" name="parite" id="t4" placeholder="parite du resultat" readonly>
+    <input type="text" name="resultat" id="t3" placeholder="Resultat" readonly>
+    <input type="text" name="parite" id="t4" placeholder="Parite du resultat" readonly>
     <br><a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
