Ajout d'un bouton de réinitialisation et de la logique associée dans la calculatrice JS pour effacer les champs de saisie et de résultat.

--- a/TP10/index.html
+++ b/TP10/index.html
@@ -25,6 +25,8 @@
     <br>
     <input type="text" name="resultat" id="t3" placeholder="Resultat" readonly>
     <input type="text" name="parite" id="t4" placeholder="Parite du resultat" readonly>
+    <br>
+    <button onclick="reset()">Réinitialiser</button>
     <br><a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
