Ajout d'une description dans index.html et gestion de l'erreur de division par zéro dans la fonction division.

--- a/TP10/index.html
+++ b/TP10/index.html
@@ -27,6 +27,9 @@
     <input type="text" name="parite" id="t4" placeholder="Parite du resultat" readonly>
     <br>
     <button onclick="reset()">Réinitialiser</button>
+    <br>
+    <p>Dans ce TP j'ai pu mettre en place plusieurs fonctions JavaScript afin de realiser une calculatrice.
+    J'ai utiliser des conditions dans les fonctions, et utilisé une logique algoritmique pour resoudre les problemes demandés.</p>
     <br><a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
