Réorganisation de la structure HTML de la calculatrice et ajout de la section de conclusion. Amélioration du style CSS pour la classe conclusion et la classe calculatrice.

--- a/TP10/index.html
+++ b/TP10/index.html
@@ -9,27 +9,31 @@
 </head>
 <body>
     <h1>TP 10 : Calculatrice JS avancée</h1>
-    <label>Nombre 1:</label>
-    <input type="number" id="t1" placeholder="Saisir le premier nombre">
+    <div class="calculatrice">
+        <label>Nombre 1:</label>
+        <input type="number" id="t1" placeholder="Saisir le premier nombre">
 
-    <label>Nombre 2:</label>
-    <input type="number" id="t2" placeholder="Saisir le deuxième nombre">
-    <br>
-    <button onclick="addition()">Addition</button>
-    <button onclick="soustraction()">Soustraction</button>
-    <button onclick="multiplication()">Multiplication</button>
-    <button onclick="division()">Division</button>
-    <br>
-    <button onclick="parite()">Parité</button>
-    <button onclick="permutation()">Permuter</button>
-    <br>
-    <input type="text" name="resultat" id="t3" placeholder="Resultat" readonly>
-    <input type="text" name="parite" id="t4" placeholder="Parite du resultat" readonly>
-    <br>
-    <button onclick="reset()">Réinitialiser</button>
-    <br>
-    <p>Dans ce TP j'ai pu mettre en place plusieurs fonctions JavaScript afin de realiser une calculatrice.
-    J'ai utiliser des conditions dans les fonctions, et utilisé une logique algoritmique pour resoudre les problemes demandés.</p>
+        <label>Nombre 2:</label>
+        <input type="number" id="t2" placeholder="Saisir le deuxième nombre">
+        <br>
+        <button onclick="addition()">Addition</button>
+        <button onclick="soustraction()">Soustraction</button>
+        <button onclick="multiplication()">Multiplication</button>
+        <button onclick="division()">Division</button>
+        <br>
+        <button onclick="parite()">Parité</button>
+        <button onclick="permutation()">Permuter</button>
+        <br>
+        <input type="text" name="resultat" id="t3" placeholder="Resultat" readonly>
+        <input type="text" name="parite" id="t4" placeholder="Parite du resultat" readonly>
+        <br>
+        <button onclick="reset()">Réinitialiser</button>
+    </div>
+    <div class="conclusion">
+        <h3>Qu'est ce que j'ai appris dans ce TP 10?</h3>
+        <p>Dans ce TP j'ai pu mettre en place plusieurs fonctions JavaScript afin de realiser une calculatrice.
+        J'ai utiliser des conditions dans les fonctions, et utilisé une logique algoritmique pour resoudre les problemes demandés.</p>
+    </div>
     <br><a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
