Add CV HTML and CSS for Mission 5
- Created index.html for the CV layout with sections for personal information, education, work experience, skills, and interests.
- Added style.css for styling the CV, including responsive design for different screen sizes.
- Updated main index.html to include a link to the new Mission 5 CV.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
                     <div class="card-icon">📋</div>
                     <h3>Mission 4</h3>
                     <p>Rapport de mission (PDF).</p>
-                </a>
+         </a>
+        
+           <a class="card" href="Mission5/index.html">
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 5</h3>
+                    <p>CV HTML</p>
+        </a>
             </div>
         </section>
     </main>
@@ -113,8 +119,3 @@
     </footer>
 </body>
 </html>
-</html>
-
-
-
-
