Ajout du CV de Waël El Harti en HTML et CSS, suppression de l'ancien fichier CSS, et mise en place d'une structure responsive.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p>Rapport de mission (PDF).</p>
          </a>
         
-           <a class="card" href="Mission5/index.html">
+           <a class="card" href="Mission5/cv.html">
                     <div class="card-icon">🎉</div>
                     <h3>Mission 5</h3>
                     <p>CV HTML</p>
