--- a/Mission5/cv.html
+++ b/Mission5/cv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Waël El Harti</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cv.css">
 </head>
 <body>
     <div class="CV">
